--- a/.github/workflows/test-ts.yml
+++ b/.github/workflows/test-ts.yml
@@ -10,13 +10,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        service:
+          - cephalon
+          - discord-embedder
+          - llm
+          - voice
+          - file-watcher
 
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: "20"
 
       - uses: actions/setup-python@v4
         with:
@@ -37,22 +46,22 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-npm-${{ hashFiles('services/ts/' + matrix.service + '/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
 
       - name: Install dependencies
-        run: make system-deps setup-ts
+        run: make system-deps setup-ts-service-${{ matrix.service }}
 
       - name: Run tests
-        run: make test-ts
+        run: make test-ts-service-${{ matrix.service }}
 
       - name: Generate coverage report
-        run: make coverage-ts
+        run: make coverage-ts-service-${{ matrix.service }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: services/ts/**/coverage/lcov.info
-          flags: ts
+          files: services/ts/${{ matrix.service }}/coverage/lcov.info
+          flags: ts-${{ matrix.service }}
