--- a/services/py/discord_attachment_embedder/requirements.txt
+++ b/services/py/discord_attachment_embedder/requirements.txt
@@ -1,6 +1,6 @@
 -i https://pypi.org/simple
 annotated-types==0.7.0; python_version >= '3.8'
-anyio==4.9.0; python_version >= '3.9'
+anyio==4.10.0; python_version >= '3.9'
 attrs==25.3.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.3.0; python_version >= '3.8'
@@ -10,6 +10,7 @@ certifi==2025.8.3; python_version >= '3.7'
 charset-normalizer==3.4.2; python_version >= '3.7'
 chromadb==1.0.15; python_version >= '3.9'
 click==8.2.1; python_version >= '3.10'
+colorama==0.4.6; os_name == 'nt'
 coloredlogs==15.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 distro==1.9.0; python_version >= '3.6'
 dnspython==2.7.0; python_version >= '3.9'
@@ -21,9 +22,8 @@ google-auth==2.40.3; python_version >= '3.7'
 googleapis-common-protos==1.70.0; python_version >= '3.7'
 grpcio==1.74.0; python_version >= '3.9'
 h11==0.16.0; python_version >= '3.8'
-hf-xet==1.1.5; python_version >= '3.8'
 httpcore==1.0.9; python_version >= '3.8'
-httptools==0.6.4; python_full_version >= '3.8.0'
+httptools==0.6.4
 httpx==0.28.1; python_version >= '3.8'
 huggingface-hub==0.34.3; python_full_version >= '3.8.0'
 humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -42,20 +42,6 @@ mmh3==5.2.0; python_version >= '3.9'
 mpmath==1.3.0
 networkx==3.5; python_version >= '3.11'
 numpy==2.3.2; python_version >= '3.11'
-nvidia-cublas-cu12==12.6.4.1; python_version >= '3'
-nvidia-cuda-cupti-cu12==12.6.80; python_version >= '3'
-nvidia-cuda-nvrtc-cu12==12.6.77; python_version >= '3'
-nvidia-cuda-runtime-cu12==12.6.77; python_version >= '3'
-nvidia-cudnn-cu12==9.5.1.17; python_version >= '3'
-nvidia-cufft-cu12==11.3.0.4; python_version >= '3'
-nvidia-cufile-cu12==1.11.1.6; python_version >= '3'
-nvidia-curand-cu12==10.3.7.77; python_version >= '3'
-nvidia-cusolver-cu12==11.7.1.2; python_version >= '3'
-nvidia-cusparse-cu12==12.5.4.2; python_version >= '3'
-nvidia-cusparselt-cu12==0.6.3; platform_system == 'Linux' and platform_machine == 'x86_64'
-nvidia-nccl-cu12==2.26.2; python_version >= '3'
-nvidia-nvjitlink-cu12==12.6.85; python_version >= '3'
-nvidia-nvtx-cu12==12.6.77; python_version >= '3'
 oauthlib==3.3.1; python_version >= '3.8'
 onnxruntime==1.22.1; python_version >= '3.10'
 opentelemetry-api==1.36.0; python_version >= '3.9'
@@ -79,8 +65,9 @@ pygments==2.19.2; python_version >= '3.8'
 pymongo==4.13.2; python_version >= '3.9'
 pypika==0.48.9
 pyproject-hooks==1.2.0; python_version >= '3.7'
+pyreadline3==3.5.4; sys_platform == 'win32' and python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-dotenv==1.1.1; python_version >= '3.9'
+python-dotenv==1.1.1
 pyyaml==6.0.2; python_version >= '3.8'
 referencing==0.36.2; python_version >= '3.9'
 regex==2025.7.34; python_version >= '3.9'
@@ -93,7 +80,7 @@ safetensors==0.5.3; python_version >= '3.7'
 scikit-learn==1.7.1; python_version >= '3.10'
 scipy==1.16.1; python_version >= '3.11'
 sentence-transformers==5.0.0; python_version >= '3.9'
-setuptools==80.9.0; python_version >= '3.9'
+setuptools==80.9.0; python_version >= '3.12'
 shellingham==1.5.4; python_version >= '3.7'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 sniffio==1.3.1; python_version >= '3.7'
@@ -103,15 +90,13 @@ threadpoolctl==3.6.0; python_version >= '3.9'
 tokenizers==0.21.4; python_version >= '3.9'
 torch==2.7.1; python_full_version >= '3.9.0'
 tqdm==4.67.1; python_version >= '3.7'
-transformers==4.54.1; python_full_version >= '3.9.0'
-triton==3.3.1; platform_system == 'Linux' and platform_machine == 'x86_64'
+transformers==4.55.0; python_full_version >= '3.9.0'
 typer==0.16.0; python_version >= '3.7'
 typing-extensions==4.14.1; python_version >= '3.9'
 typing-inspection==0.4.1; python_version >= '3.9'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn[standard]==0.35.0; python_version >= '3.9'
-uvloop==0.21.0; python_full_version >= '3.8.0'
-watchfiles==1.1.0; python_version >= '3.9'
+watchfiles==1.1.0
 websocket-client==1.8.0; python_version >= '3.8'
-websockets==15.0.1; python_version >= '3.9'
+websockets==15.0.1
 zipp==3.23.0; python_version >= '3.9'
