--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install Hy
-        run: python -m pip install hy
+        run: python -m pip install hy dotenv
 
       - name: Install system dependencies
         run: make system-deps
