--- a/.github/workflows/test-integration-e2e.yml
+++ b/.github/workflows/test-integration-e2e.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install Hy
+        run: python -m pip install hy dotenv
       - name: Install dependencies
         run: make system-deps setup-python
       - name: Run integration tests
