--- a/services/js/heartbeat/package.json
+++ b/services/js/heartbeat/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "pidusage": "^3.0.2"
   },
   "devDependencies": {
     "ava": "^6.4.1",
