--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -2,11 +2,14 @@
 	"name": "Cephalon",
 	"version": "0.0.1",
 	"description": "A proof-of-concept basic bot using @discordjs/voice",
-	"main": "dist/src/index.js",
+	"main": "dist/index.js",
 	"type": "module",
+	"imports": {
+		"@shared/js": "../../../shared/js"
+	},
 	"scripts": {
 		"build": "tsc && node scripts/patch-imports.js",
-		"start": "node dist/src/index.js",
+		"start": "node dist/index.js",
 		"test": "npm run build && ava",
 		"coverage": "npm run build && c8 ava",
 		"build:check": "tsc --noEmit --incremental false",
