--- a/services/ts/file-watcher/package.json
+++ b/services/ts/file-watcher/package.json
@@ -10,16 +10,23 @@
     "start:dev": "node --loader ts-node/esm src/index.ts",
     "build:check": "tsc --noEmit --incremental false",
     "test": "npm run build && ava",
-    "coverage": "npm run build && c8 ava"
+    "coverage": "npm run build && c8 ava",
+    "lint": "prettier --cache --check . && eslint . --cache || true",
+    "format": "prettier --cache --write . && eslint . --fix --cache || true"
   },
   "dependencies": {
-    "chokidar": "^3.5.3"
+    "chokidar": "^3.5.3",
+    "mongodb": "^6.17.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
     "ava": "^6.4.1",
     "c8": "^9.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "eslint": "^8.57.0",
+    "eslint-config-neon": "^0.1.62",
+    "prettier": "^3.4.2"
   }
 }
