--- a/.github/workflows/lint-ts.yml
+++ b/.github/workflows/lint-ts.yml
@@ -1,4 +1,4 @@
-name: Linter
+name: TS Lint Suite
 permissions:
   contents: read
 
@@ -8,11 +8,24 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        service:
+          - cephalon
+          - discord-embedder
+          - llm
+          - voice
+          - file-watcher
 
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20"
 
       - uses: actions/setup-python@v4
         with:
@@ -20,13 +33,6 @@ jobs:
 
       - name: Install Hy
         run: python -m pip install hy dotenv
-
-      - name: Install system dependencies
-        run: make system-deps
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
 
       - name: Cache pip dependencies
         uses: actions/cache@v3
@@ -40,27 +46,15 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-npm-${{ hashFiles(format('services/ts/{0}/package-lock.json', matrix.service)) }}
           restore-keys: |
             ${{ runner.os }}-npm-
 
       - name: Install dependencies
-        run: make setup
-
-      - name: Install lint dependencies
-        run: python -m pip install flake8
-
-      - name: Build project
-        run: make build
+        run: make system-deps setup-ts-service-${{ matrix.service }}
 
       - name: Lint
-        run: make lint
+        run: make lint-ts-service-${{ matrix.service }}
 
-      - name: Typecheck Python
-        run: make typecheck-python
-
-      - name: Typecheck TypeScript
+      - name: Typecheck
         run: make typecheck-ts
-
-      # - name: Format
-      #   run: make format
