--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -14,8 +14,8 @@
 		"coverage": "npm run build && c8 ava",
 		"build:check": "tsc --noEmit --incremental false",
 		"deploy": "npm run build && node --env-file=../../.env dist/util/deploy.js",
-		"lint": "prettier --cache --check . && eslint src --ext mjs,js,ts --cache",
-		"format": "prettier --cache --write . && eslint src --ext mjs,js,ts --fix --cache",
+		"lint": "biome lint .",
+		"format": "biome format .",
 		"start:dev": "node  --loader ts-node/esm  src/index.ts"
 	},
 	"keywords": [
@@ -56,9 +56,7 @@
 		"@types/node": "^22.17.0",
 		"ava": "^6.4.1",
 		"c8": "^9.1.0",
-		"eslint": "^8.57.0",
-		"eslint-config-neon": "^0.1.62",
-		"prettier": "^3.4.2",
+		"@biomejs/biome": "^2.1.3",
 		"rewrite-imports": "^3.0.0",
 		"rimraf": "^6.0.1",
 		"source-map-support": "^0.5.21",
