--- a/services/js/proxy/package.json
+++ b/services/js/proxy/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "ava": "^6.4.1",
     "supertest": "^6.3.3",
-    "c8": "^9.1.0"
+    "c8": "^9.1.0",
+    "socket.io-client": "^4.7.5"
   },
   "ava": {
     "extensions": {
