--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -50,10 +50,12 @@
 		"prism-media": "^2.0.0-alpha.0",
 		"sbd": "^1.0.19",
 		"wav": "^1.0.2",
-		"wav-decoder": "^1.3.0"
+		"wav-decoder": "^1.3.0",
+		"ws": "^8.17.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.17.0",
+		"@types/ws": "^8.5.12",
 		"ava": "^6.4.1",
 		"c8": "^9.1.0",
 		"@biomejs/biome": "^2.1.3",
