--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ollama": "^0.5.16"
+    "ollama": "^0.5.16",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "ava": "^6.4.1",
