--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install Hy
-        run: python -m pip install hy dotenv
+        run: python -m pip install hy dotenv mypy
 
       - name: Cache pip dependencies
         uses: actions/cache@v3
