--- a/services/js/vision/package.json
+++ b/services/js/vision/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "screenshot-desktop": "^1.15.1"
+    "screenshot-desktop": "^1.15.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "ava": "^6.4.1",
