--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -4,6 +4,7 @@
     "canvas": "^3.1.2",
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
-    "fs-extra": "^11.3.0"
+    "fs-extra": "^11.3.0",
+    "ws": "^8.18.0"
   }
 }
