--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "test": "ava",
     "coverage": "c8 ava",
-    "build": "echo 'no build step'"
+    "build": "echo 'no build step'",
+    "lint": "npx @biomejs/biome lint ."
   },
   "dependencies": {
     "express": "^4.18.2",
