--- a/services/py/embedding_service/requirements.txt
+++ b/services/py/embedding_service/requirements.txt
@@ -24,20 +24,21 @@ pydantic-core==2.33.2; python_version >= '3.9'
 pyyaml==6.0.2; python_version >= '3.8'
 regex==2025.7.34; python_version >= '3.9'
 requests==2.32.4; python_version >= '3.8'
-safetensors==0.5.3; python_version >= '3.7'
+safetensors==0.6.1; python_version >= '3.9'
 scikit-learn==1.7.1; python_version >= '3.10'
 scipy==1.16.1; python_version >= '3.11'
-sentence-transformers==5.0.0; python_version >= '3.9'
+sentence-transformers==5.1.0; python_version >= '3.9'
 setuptools==80.9.0; python_version >= '3.12'
 sniffio==1.3.1; python_version >= '3.7'
 starlette==0.47.2; python_version >= '3.9'
 sympy==1.14.0; python_version >= '3.9'
 threadpoolctl==3.6.0; python_version >= '3.9'
 tokenizers==0.21.4; python_version >= '3.9'
-torch==2.7.1; python_full_version >= '3.9.0'
+torch==2.8.0; python_full_version >= '3.9.0'
 tqdm==4.67.1; python_version >= '3.7'
-transformers==4.54.1; python_full_version >= '3.9.0'
+transformers==4.55.0; python_full_version >= '3.9.0'
 typing-extensions==4.14.1; python_version >= '3.9'
 typing-inspection==0.4.1; python_version >= '3.9'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn==0.35.0; python_version >= '3.9'
+websockets==15.0.1; python_version >= '3.9'
