--- a/services/js/vision/package.json
+++ b/services/js/vision/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "screenshot-desktop": "^1.15.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "ava": "^6.4.1",
-    "supertest": "^6.3.3",
-    "c8": "^9.1.0"
+    "c8": "^9.1.0",
+    "supertest": "^6.3.3"
   },
   "ava": {
     "extensions": {
