--- a/services/ts/file-watcher/package.json
+++ b/services/ts/file-watcher/package.json
@@ -16,17 +16,17 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
-    "ws": "^8.18.0"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
     "@types/ws": "^8.5.10",
     "ava": "^6.4.1",
     "c8": "^9.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "5.7.3",
     "eslint": "^8.57.0",
     "eslint-config-neon": "^0.1.62",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "ts-node": "^10.9.2",
+    "typescript": "5.7.3"
   }
 }
