--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -6,5 +6,13 @@
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.0"
   }
 }
