--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "dependencies": {
     "adm-zip": "^0.5.16",
     "dotenv": "^17.2.1",
+    "mongodb": "^6.18.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "ava": "^6.4.1"
+    "@types/jest": "^30.0.0",
+    "@types/mongodb": "^4.0.6",
+    "ava": "^6.4.1",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
