--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "scripts": {
+    "test": "ava tests/*.test.js",
+    "coverage": "c8 ava tests/*.test.js"
+  },
   "dependencies": {
     "adm-zip": "^0.5.16",
     "dotenv": "^17.2.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "ava": "^6.4.1"
+    "ava": "^6.4.1",
+    "c8": "^10.1.3",
+    "puppeteer": "^24.16.0"
   }
 }
