--- a/services/py/discord_indexer/requirements.txt
+++ b/services/py/discord_indexer/requirements.txt
@@ -29,5 +29,5 @@ pytz==2025.2
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typing-extensions==4.14.1; python_version < '3.13'
 tzdata==2025.2; python_version >= '2'
-websockets==15.0.1; python_version >= '3.9'
+websockets==15.0.1
 yarl==1.20.1; python_version >= '3.9'
