--- a/services/py/tts/requirements.txt
+++ b/services/py/tts/requirements.txt
@@ -47,4 +47,4 @@ typing-extensions==4.14.1; python_version >= '3.9'
 typing-inspection==0.4.1; python_version >= '3.9'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn==0.35.0; python_version >= '3.9'
-websockets==15.0.1; python_version >= '3.9'
+websockets==15.0.1
