--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -11,5 +11,5 @@
     "outDir": "dist",
     "lib": ["ES2022"]
   },
-  "include": ["event/**/*.ts"]
+  "include": ["event/**/*.ts", "worker/**/*.ts"]
 }
