feat: extract intention code from docs

--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -11,5 +11,10 @@
     "outDir": "dist",
     "lib": ["ES2022"]
   },
-  "include": ["event/**/*.ts", "ds/**/*.ts", "worker/**/*.ts"]
+  "include": [
+    "event/**/*.ts",
+    "ds/**/*.ts",
+    "worker/**/*.ts",
+    "intention/**/*.ts"
+  ]
 }
