build: compile intention modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 **/node_modules/**
 node_modules/
 dist/
+!shared/js/prom-lib/dist/intention/
+!shared/js/prom-lib/dist/intention/**
 data/
 pulbic/
 .env
