feat(markdown-graph): handle updates via broker task queue

--- a/services/ts/markdown-graph/tsconfig.json
+++ b/services/ts/markdown-graph/tsconfig.json
@@ -28,6 +28,6 @@
     "useDefineForClassFields": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
