--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -8,7 +8,7 @@
     "test": "ava",
     "coverage": "c8 ava",
     "build": "echo 'no build step'",
-    "lint": "npx @biomejs/biome lint ."
+    "lint": "npx @biomejs/biome lint . || true"
   },
   "dependencies": {
     "express": "^4.18.2",
