--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -5,7 +5,10 @@
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "express": "^4.19.2",
+    "jose": "^5.2.0",
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
@@ -13,6 +16,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "@types/express": "^4.17.21",
+    "@types/ws": "^8.5.9"
   }
 }
