--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -5,12 +5,15 @@
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "mongodb": "^6.5.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
