--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -15,6 +15,10 @@
     "event/**/*.ts",
     "ds/**/*.ts",
     "worker/**/*.ts",
-    "intention/**/*.ts"
+    "intention/**/*.ts",
+    "partition/**/*.ts",
+    "schema/**/*.ts",
+    "projectors/**/*.ts",
+    "examples/**/*.ts"
   ]
 }
