feat(prom-lib): add snapshot api and dev harness

--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -15,6 +15,13 @@
     "event/**/*.ts",
     "ds/**/*.ts",
     "worker/**/*.ts",
-    "intention/**/*.ts"
+    "intention/**/*.ts",
+    "snapshots/**/*.ts",
+    "projectors/**/*.ts",
+    "timetravel/**/*.ts",
+    "dev/**/*.ts",
+    "examples/**/*.ts",
+    "http/**/*.ts",
+    "ws/**/*.ts"
   ]
 }
