--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "coverage": "c8 ava tests/*.test.js"
   },
   "dependencies": {
+    "@types/express": "^5.0.3",
     "adm-zip": "^0.5.16",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "pm2": "^6.0.8",
     "ws": "^8.18.3"
