fix board-updater types

--- a/services/ts/board-updater/tsconfig.json
+++ b/services/ts/board-updater/tsconfig.json
@@ -43,6 +43,7 @@
     // Language and Environment
     "experimentalDecorators": true,
     "lib": ["ESNext", "esnext.disposable"],
+    "types": ["node"],
     "target": "ESNext",
     "useDefineForClassFields": true,
 
