--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -2,6 +2,9 @@
   "name": "@shared/js",
   "type": "module",
   "dependencies": {
+    "acorn": "^8.11.3",
+    "sucrase": "^3.35.0",
+    "@types/estree": "^1.0.5",
     "canvas": "^3.1.2",
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
