--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -19,8 +19,8 @@
     "naming/**/*.ts",
     "schema/**/*.ts",
     "dlq/**/*.ts",
-    "changefeed/**/*.ts"
-    "compiler/**/*.ts"
+    "changefeed/**/*.ts",
+    "compiler/**/*.ts",
     "ws/**/*.ts",
     "compaction/**/*.ts",
     "metrics/**/*.ts",
