--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -19,12 +19,13 @@
     "naming/**/*.ts",
     "schema/**/*.ts",
     "dlq/**/*.ts",
-    "changefeed/**/*.ts"
-    "compiler/**/*.ts"
+    "changefeed/**/*.ts",
+    "compiler/**/*.ts",
     "ws/**/*.ts",
     "compaction/**/*.ts",
     "metrics/**/*.ts",
     "examples/**/*.ts",
-    "http/**/*.ts"
+    "http/**/*.ts",
+    "rate/**/*.ts"
   ]
 }
