--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -10,13 +10,15 @@
     "express": "^4.19.2",
     "body-parser": "^1.20.2",
     "prom-client": "^15.1.0",
-    "yaml": "^2.7.0"
+    "yaml": "^2.7.0",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.30",
     "@types/express": "^4.17.21",
     "@types/body-parser": "^1.19.5",
+    "@types/ws": "^8.5.9",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
