--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -30,6 +30,7 @@
 		"@chroma-core/ollama": "^0.1.7",
 		"@discordjs/opus": "^0.10.0",
 		"@discordjs/voice": "^0.18.0",
+		"@shared/js": "file:../../../shared/js",
 		"@types/sbd": "^1.0.5",
 		"@types/wav": "^1.0.4",
 		"canvas": "^3.1.2",
@@ -48,15 +49,14 @@
 		"sbd": "^1.0.19",
 		"wav": "^1.0.2",
 		"wav-decoder": "^1.3.0",
-		"ws": "^8.17.0",
-		"@shared/js": "file:../../../shared/js"
+		"ws": "^8.17.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.1.4",
 		"@types/node": "^22.17.0",
 		"@types/ws": "^8.5.12",
 		"ava": "^6.4.1",
 		"c8": "^9.1.0",
-		"@biomejs/biome": "^2.1.3",
 		"rewrite-imports": "^3.0.0",
 		"rimraf": "^6.0.1",
 		"source-map-support": "^0.5.21",
