--- a/shared/js/package.json
+++ b/shared/js/package.json
@@ -2,30 +2,30 @@
   "name": "@shared/js",
   "type": "module",
   "dependencies": {
-    "acorn": "^8.11.3",
-    "sucrase": "^3.35.0",
     "@types/estree": "^1.0.5",
+    "acorn": "^8.11.3",
+    "body-parser": "^1.20.2",
     "canvas": "^3.1.2",
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
-    "fs-extra": "^11.3.0",
-    "ws": "^8.18.0",
     "express": "^4.19.2",
-    "body-parser": "^1.20.2",
+    "fs-extra": "^11.3.0",
+    "mongodb": "^6.18.0",
     "prom-client": "^15.1.0",
-    "yaml": "^2.7.0",
-    "mongodb": "^6.18.0"
+    "sucrase": "^3.35.0",
+    "ws": "^8.18.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21",
-    "@types/body-parser": "^1.19.5",
     "@types/ws": "^8.5.9",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0"
+    "typescript": "^5.9.2"
   }
 }
