--- a/services/ts/file-watcher/tsconfig.json
+++ b/services/ts/file-watcher/tsconfig.json
@@ -49,6 +49,11 @@
     // Completeness
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "tests/**/*.ts",
+    "../../../shared/ts/src/types/**/*.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
