--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -17,7 +17,6 @@
         "chromadb": "^1.8.1",
         "dotenv": "^17.2.1",
         "execa": "^9.6.0",
-        "express": "^4.19.2",
         "fast-glob": "^3.3.2",
         "fastify": "^4.28.1",
         "jose": "^5.10.0",
@@ -28,7 +27,6 @@
     "devDependencies": {
         "ava": "^6.1.3",
         "c8": "^9.1.0",
-        "sinon": "^17.0.1",
-        "supertest": "^7.0.0"
+        "sinon": "^17.0.1"
     }
 }
