--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "license": "GPL-3.0-only",
     "volta": {
         "node": "22.18.0"
+    },
+    "bin": {
+        "apply_patch": "./scripts/apply_patch.js"
     }
 }
